# community-pot

./: .gitignore  README.md  pyproject.toml
project/apps/core/: apps.py  context_processors.py  models.py  urls.py  views.py
project/apps/core/libs/: core_libs.py  error_handling.py  global_functions.py
project/apps/course/: admin.py  apps.py  models.py  urls.py  views.py
project/apps/course/migrations/: 0001_initial.py  0002_alter_category_description_and_more.py
project/apps/learncraft/: admin.py  apps.py  models.py  urls.py  views.py
project/apps/learncraft/migrations/: 0001_initial.py  0002_videoupload.py  0003_course_icon_source.py  0004_alter_chapter_chapter_nr_alter_section_section_nr.py  0005_alter_chapter_options_alter_section_options.py  0006_videoupload_title.py  0007_alter_chapter_chapter_nr_alter_section_section_nr.py
project/apps/user/: admin.py  apps.py  forms.py  middleware.py  models.py
project/apps/video_course/: admin.py  apps.py  urls.py  views.py
project/config/: asgi.py  local_settings.sample.py  settings.py  urls.py  wsgi.py
project/config/static/admin/css/: admin.css  (+2 more)
project/course/: urls.py  views.py
project/last_active/: admin.py  settings.py
project/scripts/: clear_db.sh
project/templates/course/: base.html  category-list.html  course-detail.html  course-list.html
project/templates/course/_partials/: admin_or_logout.html
project/templates/learncraft/: chapter-list.html  course-list copy.html  course-list.html  section-list.html
project/user/: admin.py  models.py
project/user/migrations/: 0001_initial.py
(+5 files in other folders)
