[tool.poetry]
name = "community-pot"
version = "0.2.0"
description = ""
authors = ["Alicia Schonefeld <schonefeld.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
django = "^5.1.2"
django-modeltranslation = "^0.19.10"
gunicorn = "^23.0.0"
django-admin-sortable2 = "^2.2.3"
django-autocomplete-light = "^3.11.0"
django-admin-autocomplete-filter = "^0.7.1"
isoweek = "^1.3.3"
pandas = "^2.2.3"
pillow = "^11.0.0"
uuid = "^1.30"
django-ckeditor-5 = "^0.2.15"
typing-extensions = "^4.12.2"


[tool.poetry.dev-dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
